[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/SpellSelectionPanel.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/font_72.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/UI/CharacterSelection/BackgroundTray.png" type="Texture" id=3]

[node name="SpellSelectionPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 128.0
margin_top = 56.0
margin_right = 267.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 2 )
text = "MEG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerId" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -544.0
margin_top = 56.0
margin_right = -106.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 2 )
text = "PLAYER 1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panels" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -856.0
margin_top = -302.0
margin_right = 864.0
margin_bottom = 302.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="InputTimer" to="." method="_on_InputTimer_timeout"]
